Added update probability slider.

--- a/Excel2013AppSignalRSampleWeb/Pages/ExcelSignalRSample.html
+++ b/Excel2013AppSignalRSampleWeb/Pages/ExcelSignalRSample.html
@@ -42,7 +42,11 @@
         <p>For a successful binding, you must bind to a table with one or more of the following column headings: <span id="stockProperties"/></p>
     </div>
     <div class="row-fluid">Update frequency: <span id="updateFrequency">250</span> ms.
-        <div id="updateSlider"></div></div>
+        <div id="updateFrequencySlider"></div>
+    </div>
+    <div class="row-fluid">Update probability: <span id="updateProbability">10</span> %.
+        <div id="updateProbabilitySlider"></div>
+    </div>
     <div id="messages" class="row-fluid"></div>
 </body>
 </html>
